# Helix

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
api/: README.md
cmake/: Version.cmake  version.h.in
docs/: USAGE.md  api.md  architecture.md
docs/adr/: 0000-template.md
docs/rfcs/: 0000-template.md
examples/: CMakeLists.txt  README.md
examples/hello_module/: CMakeLists.txt  hello_module.cpp  manifest.json
examples/modern_hello/: CMakeLists.txt  manifest.json  modern_hello.cpp
include/helix/: daemon.h  dependency_resolver.h  log.h  manifest.h  module.h  module_loader.h
modules/default/: CMakeLists.txt
modules/default/ConsoleLogger/: CMakeLists.txt  ConsoleLogger.cpp  manifest.json
modules/default/logger_module/: CMakeLists.txt  logger_module.cpp  manifest.json
modules/examples/: CMakeLists.txt  README.md
modules/examples/hello_module/: CMakeLists.txt  hello_module.cpp  manifest.json
src/: README.md
src/core/: dependency_resolver.cpp  manifest.cpp  module_loader.cpp
src/daemon/: daemon.cpp  helixctl.cpp  ipc_server.cpp  ipc_server.h  log_registry.cpp  main.cpp
tools/helxcompiler/: CMakeLists.txt  compiler.cpp  compiler.h  main.cpp
